--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "notinhas",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@popperjs/core": "^2.6.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/actiontext": "^6.1.0",
@@ -9,6 +10,12 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "bootstrap": "^5.0.0-beta1",
+    "bootstrap-icons": "^1.3.0",
+    "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.2.0",
+    "mini-css-extract-plugin": "^1.3.4",
+    "sass": "^1.32.5",
+    "sass-loader": "^10.1.1",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0"
   },
