add visual feedback when user has been taken

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -16,7 +16,7 @@ default: &default
   cache_manifest: false
 
   # Extract and emit a css file
-  extract_css: false
+  extract_css: true
 
   static_assets_extensions:
     - .jpg
@@ -35,6 +35,7 @@ default: &default
   extensions:
     - .mjs
     - .js
+    - .js.erb
     - .sass
     - .scss
     - .css
@@ -49,7 +50,8 @@ default: &default
 
 development:
   <<: *default
-  compile: true
+  compile: false
+  public_out_path: packs/development
 
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
